
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#7036] Fix issue with multiple grid store loading when searching
- Allow for non-PHP Dashboard File Widgets that are just HTML files
- [#6711] Fix issue with using MODx.Browser with file nodes and clicking loading edit page
- [#6936] Add sanity check for database tables getlist processor if user did not grant SHOW TABLES permissions for sql
- [#6942] Add missing resource duplicate ACL permission description lexicon string
- [#6970] Reload error log page after clearing too large error log file
- [#6956] Fix wrong groupname for OnMediaSourceDuplicate plugin event
- [#7013] Fix issue where modUser->getUserGroupNames was buggy with non-self users
- [#6960] Fix rendering issue when tree_root_id is set
- [#7031] Ensure setting from addr in modMail sets return-path as well
- [#7010] Add in rootId config option for MODx.Browser mgr widget
- [#6874] Fix issue where duplicating a TV did not copy Media Source relationships correctly
- [#6582] Fix clear cache checkbox persistence in Resource page when reloading via Template change
- Add modX::getInstance() factory method
- Allow for MODX tags within Media Source properties
- [#5410] Add lock_ttl to System Settings for controlling ttl for resource locks
- [#6575] Ensure that downloads of packages work behind proxies if allow_url_fopen is on
- [#4879] Add language selector to login page
- [#6826] Add activate/deactivate to context menu for Plugins in tree
- [#6509] Fix minify issue in windows environments due to doc root pathing
- Fix CSS for active tabs in mgr in IE
- Prevent ENTER key from firing save in textareas in various modals
- [#6712] Fix issue with Resource Group tree being limited to 10 groups
- Bypass modSystemSetting->clearCache() when OPT_SETUP is true
- Allow display of custom messages from form processors