@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#7063] Fix issue with retreiving Element Media Source cache data
 - [#7036] Fix issue with multiple grid store loading when searching
 - Allow for non-PHP Dashboard File Widgets that are just HTML files
 - [#6711] Fix issue with using MODx.Browser with file nodes and clicking loading edit page
